修复所有编译错误和业务逻辑问题
- 修复DashboardService接口方法签名不匹配
- 修复MenuService/RoleService/SystemConfigService接口方法签名
- 修复WarehouseService接口方法
- 添加缺失的Service实现类(SupplierServiceImpl, SupplierEvaluationServiceImpl, PurchaseOrderServiceImpl, ProductServiceImpl, InventoryServiceImpl)
- 修复ExportConfig缺少Excel/PDF配置属性
- 修复JpaAuditingConfig的Optional类型问题
- 修复Java 8兼容性问题(Charset转String)
- 修复lambda表达式中非final变量问题
- 添加缺失的Repository方法
- 修复类型转换问题